[add/update] - Changes to spec , upgrade to Spring and support for Car images
